--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-calendar": "^6.0.0",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
